# pos-api/src/main/resources/openapi.yml
@@ -241,15 +241,15 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /delivery/{deliveryId}:
+  /delivery:
     get:
-      summary: Get the delivery information by its ID
-      operationId: getDeliveryById
+      summary: Get the delivery information by its order ID
+      operationId: getDeliveryByOrderId
       parameters:
-        - name: deliveryId
-          in: path
+        - name: orderId
+          in: query
           required: true
-          description: Id of the delivery
+          description: Id of the order
           schema:
             type: string
       responses:
@@ -391,8 +391,6 @@ components:
       type: object
       properties:
         orderId:
-          type: string
-        deliveryId:
           type: string
         carrier:
           type: string
