# pos-delivery/src/main/java/com/micropos/delivery/model/DeliveryInfo.java
@@ -11,7 +11,6 @@ public class DeliveryInfo {
 
     private String orderId;
 
-    private String deliveryId;
-
     private String carrier;
+
 }
